--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <html lang="id">
 <head>
@@ -191,8 +189,15 @@
       <button>Top-Up</button>
     </div>
 
+    
     <div class="game">
       <img src="https://i.ibb.co/XCWDgMW/aov.jpg" alt="Arena of Valor">
+      <strong>Arena of Valor</strong><br>
+      <button>Top-Up</button>
+    </div>
+
+   <div class="game">
+    <img src="https://i.ibb.co/sJbBzVMV/d0583b9f-eb46-4c66-adef-43b1193f29cb.jpg">
       <strong>Arena of Valor</strong><br>
       <button>Top-Up</button>
     </div>
